--- a/styleescuro.css
+++ b/styleescuro.css
@@ -234,7 +234,10 @@ table{
     color:#E7BB00 ;
 }
 
-
+#form{
+        text-align: center;
+        color: white;
+}
 form{
     box-shadow: 0px 5px 15px #e7bd0064;
     margin: auto;
