--- a/styleclaro.css
+++ b/styleclaro.css
@@ -1,5 +1,5 @@
 body{
-    background-color: #9aa0a5;
+    background-color: #CDDFEF;
     font-family: "Press Start 2P", system-ui;
     font-style: normal;
     font-size: 14px;
@@ -21,7 +21,7 @@ body{
     color: rgb(0, 0, 0);
     top: 0;
     left: 0;
-    background-color: #c1c1c1;
+    background-color: #9aa0a5;
     width: 100%;
     height: 15%;
     display: grid;
@@ -32,7 +32,7 @@ body{
 }
 
 #mousecima{
-    background-color: #c1c1c1;
+    background-color: #9aa0a5;
     border-bottom: 5px solid #035374;
     border-left: 5px solid #035374;
     border-right: 5px solid #035374;
@@ -322,7 +322,7 @@ footer{
     padding-left: 400px;
 }
 
-@media (max-width: 649px) {
+@media (max-width: 600px) {
     body {
         font-size: 12px; 
         margin-top: 22%;
